# docs/swagger.json
@@ -28,7 +28,7 @@
                 "tags": [
                     "Authorization"
                 ],
-                "summary": "Handle unique Unique User Registration",
+                "summary": "Handle unique Unique User Login",
                 "parameters": [
                     {
                         "description": "The Tutor Login Data",
@@ -96,7 +96,7 @@
                 }
             }
         },
-        "/auth/signup/student": {
+        "/auth/signup": {
             "post": {
                 "description": "Accept JSON data of Student User objects and returns valid response",
                 "consumes": [
@@ -108,7 +108,7 @@
                 "tags": [
                     "Authorization"
                 ],
-                "summary": "Handle unique Student User Registration",
+                "summary": "Handle unique User Registration",
                 "parameters": [
                     {
                         "description": "The Student Registration Data",
@@ -116,7 +116,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.StudentRegistrationData"
+                            "$ref": "#/definitions/models.UserRegistrationData"
                         }
                     }
                 ],
@@ -124,7 +124,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/models.StudentRegistrationData"
+                            "$ref": "#/definitions/models.UserRegistrationData"
                         }
                     },
                     "400": {
@@ -136,9 +136,9 @@
                 }
             }
         },
-        "/auth/signup/tutor": {
+        "/auth/verifyotp": {
             "post": {
-                "description": "Accept JSON data of Tutor User objects and returns valid response",
+                "description": "Accept JSON data of User Reset password objects and returns valid response",
                 "consumes": [
                     "application/json"
                 ],
@@ -148,15 +148,15 @@
                 "tags": [
                     "Authorization"
                 ],
-                "summary": "Handle unique Tutor User Registration",
+                "summary": "Handle verifying user otp",
                 "parameters": [
                     {
-                        "description": "The Tutor Registration Data",
+                        "description": "The User Verification Data",
                         "name": "StudentData",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.TutorRegistrationData"
+                            "$ref": "#/definitions/models.VerifyUser"
                         }
                     }
                 ],
@@ -164,7 +164,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/models.TutorRegistrationData"
+                            "$ref": "#/definitions/models.VerifyUser"
                         }
                     },
                     "400": {
@@ -402,14 +402,20 @@
                 "class_type": {
                     "type": "string"
                 },
+                "exam_cost": {
+                    "type": "string"
+                },
+                "exam_id": {
+                    "type": "string"
+                },
+                "exam_profile": {
+                    "type": "string"
+                },
+                "ezam_status": {
+                    "type": "string"
+                },
                 "personal_tutor": {
                     "type": "boolean"
-                },
-                "preparation_id": {
-                    "type": "string"
-                },
-                "profile": {
-                    "type": "string"
                 },
                 "study_pack": {
                     "type": "boolean"
@@ -421,6 +427,9 @@
                     "type": "string"
                 },
                 "tutor_type": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -491,20 +500,6 @@
                     "type": "string"
                 },
                 "subjject": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.StudentRegistrationData": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "full_name": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 }
             }
@@ -623,7 +618,24 @@
                 }
             }
         },
-        "models.TutorRegistrationData": {
+        "models.UserData": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "user_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserRegistrationData": {
             "type": "object",
             "properties": {
                 "address": {
@@ -638,24 +650,18 @@
                 "password": {
                     "type": "string"
                 },
-                "tutor_type": {
+                "user_type": {
                     "type": "string"
                 }
             }
         },
-        "models.UserData": {
+        "models.VerifyUser": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "full_name": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                },
-                "user_type": {
+                "verification_otp": {
                     "type": "string"
                 }
             }
